--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "qwiic-lcd-rs"
 version = "0.1.0"
-authors = ["Romain Porte <microjoe@microjoe.org>"]
+authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
 
 [dependencies]
 i2cdev = "0.4.4"
