--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qwiic-lcd-rs"
-description = "QwiicLCD's + Rust"
+description = "This library aims at controlling QwiicLCD screens using I2C from Linux."
 version = "0.1.0"
 authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
 license = "MIT OR Apache-2.0"
