--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "qwiic-lcd-rs"
 description = "This library aims at controlling QwiicLCD screens using I2C from Linux."
-version = "0.1.1"
+version = "0.1.11"
 authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/qwiic-lcd-rs"
+repository = "https://github.com/PixelCoda/QwiicLCD-Rust"
 
 [dependencies]
 i2cdev = "0.4.4"
